--- a/css/index.scss
+++ b/css/index.scss
@@ -1,58 +1,98 @@
 body {
-    margin: 0;
-    text-align: center;
-    color: white;
+  margin: 0;
+  text-align: center;
+  color: white;
+  box-sizing: border-box;
 }
 #clock {
-    margin-top: 0;
-    font-size: 6rem;
+  margin-top: 0;
+  font-size: 6rem;
 }
 
 #bg {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 #containers {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate( -50%, -50% );
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
-.bg-black{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0,0,0,0.5);
+.bg-black {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
 }
-#todo-form{
-    input{
-        font-size:20px;
-        height:35px;
-        min-width: 320px;
-        text-align: center;
+#todo-form {
+  input {
+    font-size: 20px;
+    height: 35px;
+    min-width: 320px;
+    text-align: center;
+    color:white;
+    background-color: rgba(0,0,0,0.3);
+    border-radius: 5px;
+  }
+}
+#quote {
+  padding: 10px;
+  :first-child {
+    display: block;
+    padding: 20px;
+  }
+}
+#todo-list {
+  list-style: none;
+  button {
+    // border-style: none;
+    background-color: rgba(0, 0, 0, 0);
+    color: white;
+    border: none;
+    padding: 10px;
+    cursor: pointer;
+  }
+}
+#weather {
+  text-align: right;
+  margin-right: 10px;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  min-width: 320px;
+  max-width: 400px;
+  margin: auto;
+  align-items: center;
+}
+
+.btn {
+  button {
+    width: 60px;
+    height: 30px;
+    background-color: rgba(0, 0, 0, 0.3);
+    color: white;
+    border-radius: 5px;
+    &:hover {
+      color: rgb(255, 139, 106);
+      cursor: pointer;
     }
+  }
 }
-#quote{
-    padding:10px;
-    :first-child{
-        display: block;
-        padding:20px;
-    }
-}
-#todo-list{
-    list-style: none;
-    button{
-        // border-style: none;
-        background-color: rgba(0,0,0,0);
-        color:white;
-        border:none;
-        padding:10px;
-        cursor: pointer;
-    }
-}
-#weather{
-    text-align: right;
-    margin-right: 10px;
+
+#greeting {
+  margin-bottom: 50px;
+  font-size: 30px;
+  input{
+    background-color: rgba(0,0,0,0.3);
+    color:white;
+    width: 240px;
+    height:30px;
+    border-radius: 5px;
+    font-size: 16px;
+  }
 }
