--- a/css/index.css
+++ b/css/index.css
@@ -76,6 +76,7 @@ body {
   width: 60px;
   height: 30px;
   background-color: rgba(0, 0, 0, 0.3);
+  border-color: whitesmoke;
   color: white;
   border-radius: 5px;
 }
@@ -91,6 +92,8 @@ body {
 #greeting input {
   background-color: rgba(0, 0, 0, 0.3);
   color: white;
+  border-color: whitesmoke;
+  padding: 10px;
   width: 240px;
   height: 30px;
   border-radius: 5px;
