--- a/css/index.scss
+++ b/css/index.scss
@@ -75,6 +75,7 @@ body {
     width: 60px;
     height: 30px;
     background-color: rgba(0, 0, 0, 0.3);
+    border-color: whitesmoke;
     color: white;
     border-radius: 5px;
     &:hover {
@@ -90,6 +91,8 @@ body {
   input{
     background-color: rgba(0,0,0,0.3);
     color:white;
+    border-color: whitesmoke;
+    padding:10px;
     width: 240px;
     height:30px;
     border-radius: 5px;
